# rusty-hw-ide

./: .gitignore  Cargo.toml  IMPORTANT_DIRECTORY_INFO.md  INSTALLATION_AND_USAGE.md  UBUNTU_ARDUINO_SETUP.md  UPLOAD_TROUBLESHOOTING.md  diagnose_arduino.sh  test_arduino_core.rs  test_port_access  test_port_access.rs  wsl_config.wslconfig  wsl_usb_setup.md
hw_hal/: Cargo.toml
hw_hal/src/: config.rs  debug.rs  detection.rs  lib.rs  platforms.rs  serial.rs  test.rs
hw_ide_core/: Cargo.toml
hw_ide_core/src/: compiler.rs  main.rs
hw_ui/: Cargo.toml
hw_ui/src/: editor.rs  hardware_panel.rs  lib.rs  menu_bar.rs  serial_monitor.rs  status_bar.rs
